Fixed CMP stats not showing name

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -165,9 +165,9 @@ transform: translateY(-50%);
 
 
   position: relative;
-  right:50%;
+  float:right;
   top: 50%;
-  transform: translateY(-50%, -50%);
+  transform: translateY(-50%);
 
 }
 .help-btn i
